# nastran-parser

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  pyproject.toml  strictdoc_config.py
.claude/skills/architecture-design/: SKILL.md
.claude/skills/architecture-design/references/: dossier-template.md
.claude/skills/architecture-design/scripts/: export_puml.py  generate_requirements_md.py
architecture/: architectural_dossier.md
architecture/diagrams/: functional_breakdown.excalidraw  functional_breakdown.puml  logical_design.excalidraw  logical_design.puml
architecture/requirements/: functional_requirements.sdoc  grammar.sgra  nonfunctional_requirements.sdoc  requirements.md
architecture/requirements-html/html/: index.html  traceability_matrix.html
architecture/requirements-html/html/_static/: project_map.js  static_html_search_index.js
architecture/requirements-html/html/nastran-parser/architecture/requirements/: functional_requirements-DEEP-TRACE.html  functional_requirements-TABLE.html  functional_requirements-TRACE.html  functional_requirements.html  nonfunctional_requirements-DEEP-TRACE.html  nonfunctional_requirements-TABLE.html  nonfunctional_requirements-TRACE.html  nonfunctional_requirements.html
architecture/scripts/: generate_requirements_md.py
src/nastran_parser/: __init__.py
