[project]
name = "nastran-parser"
version = "0.1.0"
description = "Parse, mutate, and write NASTRAN BDF files"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Michael Wrzos", email = "michael.wrzos@gmx.de" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "strictdoc>=0.21.1",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
packages = ["nastran_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=nastran_parser --cov-report=term-missing"
